--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,29 +12,43 @@
         android:id="@+id/textView_List"
         android:layout_width="match_parent"
         android:layout_height="336dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/editText"
-        android:layout_marginTop="18dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="11dp"
         android:background="#AAFFAA"
         android:overScrollMode="ifContentScrolls"
         android:scrollbars="horizontal"
         android:text="텍스트 목록"
+
         android:textColor="#000000"
         android:textSize="20dp"
         tools:layout_editor_absoluteX="16dp"
-
-        tools:layout_editor_absoluteY="16dp"
-        android:layout_margin="10dp"/>
+        tools:layout_editor_absoluteY="16dp" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="180dp"
         android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="77dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="99dp"
         android:background="#00FFF0"
         android:text=""
+        android:textColor="#000000"
+        android:textSize="20dp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="140dp" />
+
+    <EditText
+        android:id="@+id/editText_ip"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/editText"
+        android:layout_marginTop="20dp"
+        android:background="#00FFF0"
+        android:text="192.168.1."
         android:textColor="#000000"
         android:textSize="20dp"
         tools:layout_editor_absoluteX="16dp"
