--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,70 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    android:padding="16dp"
+    tools:context=".MainActivity">
+
+
+
+
 
     <TextView
-        android:id="@+id/textView_List"
-        android:layout_width="match_parent"
-        android:layout_height="336dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="11dp"
-        android:background="#AAFFAA"
-        android:overScrollMode="ifContentScrolls"
-        android:scrollbars="horizontal"
-        android:text="텍스트 목록"
-
-        android:textColor="#000000"
-        android:textSize="20dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
+        android:id="@+id/textViewReciev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="99dp"
-        android:background="#00FFF0"
-        android:text=""
-        android:textColor="#000000"
-        android:textSize="20dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="140dp" />
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="73dp"
+        android:text="Hello World!"
+        android:textColor="@color/colorAccent"
+        android:textSize="16dp" />
 
     <EditText
-        android:id="@+id/editText_ip"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/editText"
-        android:layout_marginTop="20dp"
-        android:background="#00FFF0"
-        android:text="192.168.1."
-        android:textColor="#000000"
-        android:textSize="20dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="140dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="@string/server_IP"
+        android:ems="10"
+        android:layout_below="@+id/textViewReciev"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="31dp"
+        android:id="@+id/addressText" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="@string/Main_message"
+        android:ems="10"
+        android:layout_marginTop="10dp"
+        android:id="@+id/messageText"
+        android:layout_below="@+id/portText"
+        android:layout_alignStart="@+id/portText" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="9000"
+        android:ems="10"
+        android:id="@+id/portText"
+        android:layout_below="@+id/addressText"
+        android:layout_alignStart="@+id/addressText" />
 
     <Button
-        android:id="@+id/button_Send"
-        android:layout_width="100dp"
+        android:text="clear"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/editText"
-        android:layout_marginEnd="13dp"
-        android:text="보내기"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        tools:layout_editor_absoluteX="231dp"
-        tools:layout_editor_absoluteY="140dp" />
+        android:id="@+id/buttonClear"
+        android:layout_alignBaseline="@+id/buttonConnect"
+        android:layout_alignBottom="@+id/buttonConnect"
+        android:layout_alignEnd="@+id/messageText"
+
+        />
+
+    <Button
+        android:text="Send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonConnect"
+        android:layout_below="@+id/messageText"
+        android:layout_alignStart="@+id/messageText"
+        android:layout_marginTop="13dp"
+
+        />
 
 </RelativeLayout>
