--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,73 +8,135 @@
     tools:context=".MainActivity">
 
 
-
-
-
-    <TextView
-        android:id="@+id/textViewReciev"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="73dp"
-        android:text="Hello World!"
-        android:textColor="@color/colorAccent"
-        android:textSize="16dp" />
+        android:id="@+id/RelativeLY"
+        >
 
-    <EditText
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/textViewReciev"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="27dp"
+            android:layout_marginTop="50dp"
+            android:text="Hello World!"
+            android:textColor="@color/colorAccent"
+            android:textSize="16dp" />
+
+        <EditText
+            android:id="@+id/addressText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textViewReciev"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="31dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="@string/server_IP" />
+
+        <EditText
+            android:id="@+id/portText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/addressText"
+            android:layout_alignStart="@+id/addressText"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="9000" />
+
+        <Button
+            android:id="@+id/buttonClear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/buttonConnect"
+            android:layout_alignEnd="@+id/portText"
+            android:layout_alignBottom="@+id/buttonConnect"
+            android:text="clear"
+
+            />
+
+        <Button
+            android:id="@+id/buttonConnect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/portText"
+            android:layout_alignStart="@+id/portText"
+
+            android:text="Send"
+
+            />
+
+
+    </RelativeLayout>
+
+    <TableLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="@string/server_IP"
-        android:ems="10"
-        android:layout_below="@+id/textViewReciev"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="31dp"
-        android:id="@+id/addressText" />
+        android:layout_below="@+id/RelativeLY"
+        >
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="@string/Main_message"
-        android:ems="10"
-        android:layout_marginTop="10dp"
-        android:id="@+id/messageText"
-        android:layout_below="@+id/portText"
-        android:layout_alignStart="@+id/portText" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="9000"
-        android:ems="10"
-        android:id="@+id/portText"
-        android:layout_below="@+id/addressText"
-        android:layout_alignStart="@+id/addressText" />
+            >
 
-    <Button
-        android:text="clear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/buttonClear"
-        android:layout_alignBaseline="@+id/buttonConnect"
-        android:layout_alignBottom="@+id/buttonConnect"
-        android:layout_alignEnd="@+id/messageText"
+            <Button
+                android:id="@+id/button_volt_graph"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/volt_graph"
+                android:layout_marginHorizontal="20dp"
+                />
 
-        />
+            <Button
+                android:id="@+id/button_volt_temp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/volt_temp"
+                android:layout_marginHorizontal="20dp"
 
-    <Button
-        android:text="Send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/buttonConnect"
-        android:layout_below="@+id/messageText"
-        android:layout_alignStart="@+id/messageText"
-        android:layout_marginTop="13dp"
+                />
+        </TableRow>
 
-        />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            >
+
+            <Button
+                android:id="@+id/button_dust_graph"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dust_graph"
+                android:layout_marginHorizontal="20dp"
+                />
+
+            <Button
+                android:id="@+id/button_dust_temp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dust_temp"
+
+                android:layout_marginHorizontal="20dp"
+
+                />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </TableLayout>
+
 
 </RelativeLayout>
