--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,21 +5,26 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_main"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="@string/main_activity" />
+
+        <item
+            android:id="@+id/nav_voltGraph"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="@string/volt_graph" />
+        <item
+            android:id="@+id/nav_voltTemp"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="@string/volt_temp" />
+        <item
+            android:id="@+id/nav_dustGraph"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="@string/dust_graph" />
+        <item
+            android:id="@+id/nav_dustTemp"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="@string/dust_temp" />
     </group>
 
     <item android:title="Communicate">
