--- a/app/src/main/res/layout/content_graph1.xml
+++ b/app/src/main/res/layout/content_graph1.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Graph1Activity"
-    tools:showIn="@layout/app_bar_graph1">
+    tools:showIn="@layout/app_bar_graph1"
+    android:orientation="vertical"
+    >
+
+
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+    </com.github.mikephil.charting.charts.LineChart>
 
 
-
-
-
-</RelativeLayout>
+</LinearLayout>
