--- a/app/src/main/res/layout/content_graph2.xml
+++ b/app/src/main/res/layout/content_graph2.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Graph2Activity"
-    tools:showIn="@layout/app_bar_graph2">
+    tools:showIn="@layout/app_bar_graph2"
+    android:orientation="vertical">
+
+
+
 
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    </com.github.mikephil.charting.charts.LineChart>
+
+</LinearLayout>
