--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,30 +15,34 @@
         android:id="@+id/RelativeLY"
         >
 
+
         <TextView
             android:id="@+id/textViewReciev"
             android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="27dp"
-            android:layout_marginTop="50dp"
-            android:text="Hello World!"
-            android:textColor="@color/colorAccent"
-            android:textSize="16dp" />
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:visibility="gone"
+            />
 
-        <EditText
+
+
+
+        <com.beardedhen.androidbootstrap.BootstrapEditText
             android:id="@+id/addressText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textViewReciev"
+            android:paddingTop="36dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="31dp"
+            android:layout_marginTop="70dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="@string/server_IP" />
+            android:text="@string/server_IP"
 
-        <EditText
+            app:bootstrapSize="lg"
+            app:bootstrapBrand="info"
+            />
+
+        <com.beardedhen.androidbootstrap.BootstrapEditText
             android:id="@+id/portText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,29 +50,13 @@
             android:layout_alignStart="@+id/addressText"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="9000" />
-
-        <Button
-            android:id="@+id/buttonClear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/buttonConnect"
-            android:layout_alignEnd="@+id/portText"
-            android:layout_alignBottom="@+id/buttonConnect"
-            android:text="clear"
-
+            android:text="9000"
+            android:layout_marginTop="2dp"
+            app:bootstrapSize="lg"
+            app:bootstrapBrand="info"
             />
 
-        <Button
-            android:id="@+id/buttonConnect"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/portText"
-            android:layout_alignStart="@+id/portText"
 
-            android:text="Send"
-
-            />
 
 
     </RelativeLayout>
@@ -76,6 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/RelativeLY"
+        android:layout_marginTop="24dp"
         >
 
         <TableRow
@@ -85,22 +75,22 @@
 
             >
 
-            <Button
+            <com.beardedhen.androidbootstrap.BootstrapButton
                 android:id="@+id/button_volt_graph"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/volt_graph"
+                android:text="전류센서 그래프"
+                app:bootstrapBrand="primary"
+                app:bootstrapSize="lg"
+                app:buttonMode="regular"
+                app:showOutline="false"
+                app:roundedCorners="true"
                 android:layout_marginHorizontal="20dp"
+                android:onClick="forceCrash"
                 />
 
-            <Button
-                android:id="@+id/button_volt_temp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/volt_temp"
-                android:layout_marginHorizontal="20dp"
 
-                />
+
         </TableRow>
 
         <TableRow
@@ -109,21 +99,19 @@
             android:gravity="center_horizontal"
             >
 
-            <Button
+            <com.beardedhen.androidbootstrap.BootstrapButton
                 android:id="@+id/button_dust_graph"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="2dp"
                 android:text="@string/dust_graph"
-                android:layout_marginHorizontal="20dp"
-                />
-
-            <Button
-                android:id="@+id/button_dust_temp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dust_temp"
-
-                android:layout_marginHorizontal="20dp"
+                android:onClick="forceCrash"
+                app:bootstrapBrand="primary"
+                app:bootstrapSize="lg"
+                app:buttonMode="regular"
+                app:showOutline="false"
+                app:roundedCorners="true"
 
                 />
 
@@ -131,11 +119,69 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+
+            >
+
+
+
+            <TextView
+                android:id="@+id/tv_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="공기청정기 자동"
+                android:textColor="@android:color/black"
+                android:textSize="18dp"/>
+
+
+            <Switch
+                android:id="@+id/airCleaner_switch"
+                android:layout_width="20dp"
+                android:layout_height="52dp"
+                android:checked="false"
+                android:textSize="18dp"
+
+                />
+
+        </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+
+            <com.beardedhen.androidbootstrap.BootstrapButton
+                android:id="@+id/start_AC"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="50dp"
+                android:enabled="false"
+                android:text="Start"
+                android:onClick="forceCrash"
+                app:bootstrapBrand="primary"
+                app:bootstrapSize="lg"
+                app:buttonMode="regular"
+                app:showOutline="false"
+                app:roundedCorners="true"
+                />
+
+            <com.beardedhen.androidbootstrap.BootstrapButton
+                android:id="@+id/stop_AC"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:enabled="false"
+                android:text="Stop"
+                android:onClick="forceCrash"
+                app:bootstrapBrand="primary"
+                app:bootstrapSize="lg"
+                app:buttonMode="regular"
+                app:showOutline="false"
+                app:roundedCorners="true"
+                />
+        </TableRow>
     </TableLayout>
 
 
